<resources>
    <string name="default_web_client_id">542657467951-gf798m6df5hnrgl5b8n2or8gd1c02daq.apps.googleusercontent.com</string>
    <string name="app_name" translatable="false">MindTrade</string>
    <!-- Descripción para la imagen del logo -->
    <string name="logo_image" translatable="false">Logo MindTrade</string>
    <!-- Descripción para el texto pantalla inicial -->
    <string name="textviewExplore" translatable="false">Domina tus estrategias de trading</string>
    <!-- Descripción para el texto crea tu cuenta -->
    <string name="textviewCreate" translatable="false">Crea tu cuenta</string>
    <!-- Descripción para el texto email -->
    <string name="textviewEmail" translatable="false">Correo electrónico</string>
    <!-- Descripción para el texto password -->
    <string name="textviewPassword" translatable="false">Contraseña</string>
    <!-- Descripción para el texto repetir pasword -->
    <string name="textviewPassword2" translatable="false">Repetir Contraseña</string>


    <!-- Descripción para el botón de inicio de sesión -->
    <string name="sessionButton" translatable="false">Iniciar sesión</string>
    <!-- Descripción para el botón de inicio de sesión -->
    <string name="textViewQuestion" translatable="false">¿No tienes una cuenta?</string>
    <string name="textViewRegister" translatable="false">Regístrate</string>
    <string name="textViewContinue" translatable="false">O continúa con:</string>
    <string name="textViewGoogle" translatable="false">Google</string>
    <!-- Descripción para la imagen de edificios de pantalla de inicio -->
    <string name="buildings_image_description" translatable="false">Imagen de edificios similares a WallStreet</string>


    <!-- Descripción para la imagen de dos traders en la pantalla de bienvenida -->
    <string name="traders_image_description" translatable="false">Imagen de dos traders en la pantalla de bienvenida</string>
    <!-- Descripción para el texto de bienvenida -->
    <string name="welcome_TextView_description" translatable="false">Bienvenido a MindTrade</string>
    <!-- Descripción para el texto de presentación -->
    <string name="presentation_TextView" translatable="false">Gestiona y mejora tus estrategias de trading. Lleva un registro de tus operaciones, comparte tus ideas y optimiza tus decisiones.</string>
    <!-- Descripción para el texto de presentación -->
    <string name="getStart_TextView" translatable="false">¡Comencemos!</string>

    <!-- Descripción para el título de estilo de trading -->
    <string name="titleStyle" translatable="false">Selecciona tu estilo:</string>
    <!-- Descripción para el título de estilo de scalping -->
    <string name="titleScalping" translatable="false">Scalping</string>
    <!-- Descripción para la tarjeta de scalping -->
    <string name="scalping_TexView" translatable="false">Estilo ultrarrápido, busca pequeñas ganancias en minutos.</string>
    <!-- Descripción para el título de estilo de daytrading -->
    <string name="titleDaytrading" translatable="false">Day Trading</string>
    !-- Descripción para la tarjeta de daytrading -->
    <string name="daytrading_TexView" translatable="false">Opera en el mismo día para captar fluctuaciones del mercado.</string>
    <!-- Descripción para el título de estilo de swingtrading -->
    <string name="titleSwingtrading" translatable="false">Swing Trading</string>
    !-- Descripción para la tarjeta de daytrading -->
    <string name="swingtrading_TexView" translatable="false">Sigue tendencias en periodos de días o semanas.</string>

    <!-- Descripción para el título del activity psico -->
    <string name="titlePsico" translatable="false">¿Cómo te sientes respecto a tu trading en este momento?</string>
    <!-- Descripción para el título de psico+ -->
    <string name="psicoPositiveTitle" translatable="false">Psico +</string>
    <!-- Descripción para la tarjeta de psico+ -->
    <string name="psicoPositiveTexview" translatable="false">"Me siento positivo y en control. Estoy manejando bien mi relación con el mercado."</string>

    <!-- Descripción para el título de psico- -->
    <string name="psicoNegativeTitle" translatable="false">Psico -</string>
    <!-- Descripción para la tarjeta de psico- -->
    <string name="psicoNegativeTexview" translatable="false">"Me siento negativo o fuera de control. Las emociones están afectando mis decisiones."</string>
    <string name="title_activity_psico_negative">PsicoNegativeActivity</string>

    <!-- Descripción para el título de activityPsicoNegative -->
    <string name="titleNegativeEmotions" translatable="false">¿Qué has sentido últimamente hacia el mercado?</string>

    <!-- Descripción para el título de tarjetas de emociones negativas -->
    <string name="titleAnsiedad" translatable="false">Ansiedad</string>
    <string name="titleImpaciencia" translatable="false">Impaciencia</string>
    <string name="titleDescontrol" translatable="false">Descontrol</string>
    <string name="titleAvaricia" translatable="false">Avaricia</string>
    <string name="titleInsatisfaccion" translatable="false">Insatisfacción</string>
    <string name="titleRabia" translatable="false">Rabia</string>
    <string name="titleVerguenza" translatable="false">Vergüenza</string>
    <string name="titleConsfusion" translatable="false">Confusión</string>
    <string name="titleMiedo" translatable="false">Miedo</string>
    <string name="titleFrustracion" translatable="false">Frustración</string>
    <string name="titleIneficacia" translatable="false">Ineficacia</string>
    <string name="titleFatalismo" translatable="false">Fatalismo</string>

    <!-- Descripción para el título de tarjetas de emociones positivas -->
    <string name="titleAutocontrol" translatable="false">Autocontrol</string>
    <string name="titleConfianza" translatable="false">Confianza</string>
    <string name="titleEficiencia" translatable="false">Eficiencia</string>
    <string name="titleOptimismo" translatable="false">Optimismo</string>
    <string name="titlePaciente" translatable="false">Paciencia</string>
    <string name="titleRealizacion" translatable="false">Realización</string>
    <string name="titleSatisfaccion" translatable="false">Satisfacción</string>
    <string name="titleSeguridad" translatable="false">Seguridad</string>
    <string name="titleSintonia" translatable="false">Sintonía</string>
    <string name="titleTranquilidad" translatable="false">Tranquilidad</string>
    <string name="titleAceptación" translatable="false">Aceptación</string>
    <string name="titleAfirmación" translatable="false">Afirmación</string>
    <string name="titleControl" translatable="false">Control</string>

    <string name="select_your_avatar" translatable="false">Selecciona un avatar</string>
    <string name="avatar" translatable="false">Imagen de avatar</string>
    <string name="enter_your_alias" translatable="false">Escribe tu alias</string>
    <string name="what_is_your_birthday" translatable="false">¿Cuándo naciste?</string>
    <!-- Descripción para el texto alias -->
    <string name="enter_alias_hint" translatable="false">Alias</string>
    <string name="continueButton" translatable="false">Continuar</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>

    <string name="toros_y_osos">Fondo de toros contra osos</string>

    <string name="detalle_imagen">Descripción de la imagen</string>
    <string name="nombre_de_la_imagen">Nombre de la imagen</string>

    <string name="edit_icon">Editar</string>
    <string name="delete_icon">Borrar</string>
    <string name="add_to_favorites">Añadir afavoritas</string>

    <string-array name="currencies_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>


        <string name="select_operation_type">Selecciona Tipo de Operación</string>
        <string-array name="operation_types">
            <item>Buy</item>
            <item>Sell</item>
        </string-array>


    <string-array name="emotional_states">
        <item>Selecciona un estado emocional</item>
        <item>Psico+</item>
        <item>Psico-</item>
    </string-array>

    <string-array name="rating_options">
        <item>Más valoradas primero</item>
        <item>Menos valoradas primero</item>
        <item>Más veces favoritas</item>
        <item>Más comentadas</item>
        <item>Más movimientos</item>
    </string-array>


    <string name="my_profile">Mi Perfil</string>
    <string name="user_alias">Alias del Usuario</string>
    <string name="user_email">Correo electrónico</string>
    <string name="trading_style">Estilo de Trading</string>
    <string name="psico_state">Estado Psicológico</string>
    <string name="emotion_state">Emoción Predominante</string>




</resources>