<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome_activity">

    <ImageView
        android:id="@+id/Traders"
        android:layout_width="528dp"
        android:layout_height="508dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/traders_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tradersfondo" />

    <ImageView
        android:id="@+id/Máscara"
        android:layout_width="492dp"
        android:layout_height="611dp"
        android:contentDescription="@string/mascara_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/curva" />

    <TextView
        android:id="@+id/Welcome"
        android:contentDescription="@string/welcome_TextView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/welcome_TextView_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Máscara"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:id="@+id/TextoPresentación"
        android:layout_width="298dp"
        android:layout_height="134dp"
        android:contentDescription="@string/presentation_TextView"
        android:text="@string/presentation_TextView"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/getStart_TextView"
        android:text="@string/getStart_TextView"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextoPresentación"
        app:layout_constraintVertical_bias="0.091"
        app:rippleColor="#FFFFFF" />

    <!-- Parte inferior blanca -->

</androidx.constraintlayout.widget.ConstraintLayout>
